--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,7 @@
-<h1>Listing Posts</h1>
+<h1>Announcements</h1>
 
     <%= render :partial => @posts %>
 
 
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to 'Log in to Create a New Post', new_post_path %>
