--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,15 +36,47 @@
      border-width: 0 0 1px 0;
      border-radius: 20px;
  }
-.button{
-width:500px;
-height:500px;
-background: blue;
-color:white;
-border-radius: 5px;
+.headerBar{
+  background-color:#afe2aa;
+  height:300px;
+}
+.logo{
+  font-size:60px;
+  text-align: center;
+  top:75px;
+  position:relative;
+}
+.navBar{
+background-color:#54ab4b;
+height:50px;
+text-align: center;
+font-size:20px;
 
 }
-.button:hover{
- background-image: url("//upload.wikimedia.org/wikipedia/en/thumb/2/2d/MagLiteFlashlight.jpg/225px-MagLiteFlashlight.jpg");
-
+.navButtons a{
+  background-color: #ff9140;
+  padding:9px;
+  position:relative;
+  top:16px;
+  color:#5a58ae;
+  font-weight: bold;
+  font-size: 25px;
+  width:100px;
+  height:60px;
+  text-align: center;
+  border-radius: 5px;
+  border: solid 1px #E58239;
 }
+  .navButtons a:hover{
+    text-decoration: none !important;
+    background-color: #E58239;
+
+  }
+  .navButtons a:visited{
+    text-decoration: none !important;
+
+
+  }
+  .center_content{
+    /*background-color: #ededed;*/
+  }
