--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,16 +6,17 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
 
-<div style= "background-color:lightgreen;height:200px;">
-  <h1 style= "font-size:60px;text-align: center;"> <%= link_to "Chabad of Marine Park", root_path() %> </h1>
+<div class = "headerBar">
+  <div class = "logo" > <%= link_to image_tag("cm.png", size: "572x160"), root_path() %> </div>
+
 </div>
-<div style= "background-color:lightgrey;height:50px;text-align: center;font-size:20px;">
-  <span style= "background-color:lightblue;padding:5px;position:relative;top:10px;"><%= link_to "Anouncements", posts_path() %></span>
-  <span style= "background-color:lightblue;padding:5px;position:relative;top:10px;"><%= link_to "Donate", donations_path() %></span>
-  <span style= "background-color:lightblue;padding:5px;position:relative;top:10px;"><%= link_to "Events/Calander", events_path() %></span>
+<!-- <p class="notice"><%#= notice %></p>
+       <p class="alert"><%#= alert %></p> -->
+<div class = "navBar" >
+  <span class= "navButtons"><%= link_to "Anouncements", posts_path() %></span>
+  <span class= "navButtons"><%= link_to "Donate", donations_path() %></span>
+  <span class= "navButtons"><%= link_to "Events/Calander", events_path() %></span>
 </div>
 <body>
   <div class="center_content">
